--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # NextAuth Configuration
-NEXTAUTH_SECRET=your_nextauth_secret_here
+NEXTAUTH_SECRET="your_nextauth_secret_here"
 NEXTAUTH_URL=http://localhost:3000
 
 # Google OAuth
@@ -7,4 +7,4 @@ GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # Database
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://username:password@localhost:3306/notesdb"
